duniverse/menhirLib.20200211/test/static/bad/undefined-non-terminal-reference.mly
%start<int> a
%%

a: b {}

